[tool.poetry]
name = "ChatGDB"
version = "1.1.0"
authors = ["Pranay Gosar <gosarpranay@gmail.com>"]
description = "Harness the power of ChatGPT directly inside the GDB debugger!"
readme = "README.md"
license = "MIT"
repository = "https://github.com/pgosar/chatgdb"
keywords = ["gdb", "debugger", "chatgpt"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/pgosar/chatgdb/issues"

[tool.poetry.dependencies]
python = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
chatgdb = "chatgdb.cli:main"
